# chofyai-studio

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  .markdownlintignore  .npmrc  ABOUT.md  CHANGELOG.md  CONTRIBUTING.md  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.cargo/: config.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml  security.yml
apps/: aceforge.yaml  comfyui.yaml  facefusion.yaml  qwen3-tts.yaml  whispercpp.yaml
docs/: INSTALL_MAC.md  MANIFEST_SPEC.md  NOTARIZATION.md  PACKAGE_MANAGER.md  PORQUE-NO-FUNCIONABA.md  PORTING_GUIDE.md  POSTMORTEM-2026-05-17.md  PROJECT_OVERVIEW.md  REQUIREMENTS.md  SCRIPTS_REFERENCE.md  SECURITY_WORKFLOW.md  STATUS.md  TOOLS.md  TROUBLESHOOTING.md  aceforge-phase2.md  architecture.md  decisions.md  facefusion-phase2.md  manifests.md  packaging.md  qwen3-tts-phase2.md  whispercpp-phase2.md
docs/cloud/: AWS_ARCHITECTURE.md  AWS_COSTS.md  AWS_MIGRATION.md  AWS_SECURITY.md  AWS_SERVICES.md  README.md  (+1 more)
landing/: index.html  main.js  styles.css
marketplace/: registry.yaml
src/: App.tsx  i18n.test.ts  i18n.ts  styles.css  types.ts  utils.test.ts  utils.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  models.rs  system.rs
workflows/: audio-pipeline.yaml  comfyui-prompt.yaml  transcribe-audio.yaml
(+20 files in other folders)
