[package]
name = "chofyai_studio"
version = "0.1.0"
description = "Launcher local para voz, video, imagen y música en Apple Silicon"
authors = ["Vladimir Acuña"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "1"
tauri = { version = "2", features = [] }
walkdir = "2"
